# AdLint

./: .gitignore  ACCESSIBILITY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PRD.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: accessibility.yml  bug_report.md  eval_case.md  feature_request.yml  policy_rule.md
.github/workflows/: test.yml
adlint/: __init__.py  __main__.py  api.py  audit_log.py  batch.py  cli.py  config.py  engine.py  models.py  policy.py  reports.py  storage.py
adlint/classifiers/: __init__.py  ollama.py
adlint/policies/: __init__.py  brand_custom_template.yml  brand_safety_iab.yml  ftc_health_claims.yml  platform_google_ads.yml  platform_linkedin_ads.yml  platform_meta_ads.yml  platform_tiktok_ads.yml  privacy_consumer_health_data.yml  privacy_hipaa_marketing.yml  privacy_tracking_pixels.yml
adlint/rewrites/: __init__.py  suggestions.py
adlint/rules/: __init__.py  engine.py
adlint/scoring/: __init__.py  config.py  core.py
adlint/scrapers/: __init__.py  landing_page.py
adlint/static/: app.js  index.html  styles.css
api/: main.py
docs/: adlint_hybrid_eval_paper.tex  adlint_paper_figure_proposals.tex  adlint_paper_visual_qa.md  adlint_research_program.md  announcement_draft.md  competitive_research_2026_05.md  competitive_research_2026_05_16.md  eval_report.md  legal_disclaimer.md  local_models.md  meta_ads_scope.md  open_source_goal.md  overnight_report_2026_05_17.md  policy_coverage_matrix.md  policy_design.md  release_v0.1.0.md  research_loop.md  research_paper.md
docs/assets/demo/: adlint-report.json  adlint-report.md
evals/: README.md  collect_real_world_candidates.py  generate_benchmark_dataset.py  generate_real_cases_dataset.py  generate_real_world_blind_dataset.py  model_review_usefulness.py  policy_coverage.py  preflight_eval_assets.py  real_cases.md  research_loop.py  rewrite_quality.py  run_eval.py  validate_policy_coverage.py  validate_real_cases.py
evals/datasets/: creative_asset_metadata_v1.jsonl  landing_page_consistency_v1.jsonl  model_review_usefulness_v1.jsonl  real_cases_v1.jsonl  real_world_blind_v1.jsonl  rewrite_quality_v1.jsonl  rule_benchmark_v1.jsonl  seed_ads.jsonl
examples/: approved_saas.json  batch_campaigns.csv  brand_safety_review.json  high_risk_tiktok_health.json  linkedin_sensitive_targeting.json  meta_approved_saas.json  meta_financial_services_review.json  meta_high_risk_health.json  meta_needs_review_creator.json  meta_private_health_info_high_risk.json  meta_special_ad_category_review.json  needs_review_google_wellness.json  tiktok_asset_text_overlay_review.json
tests/: test_api.py  test_ci_eval_config.py  test_cli.py  test_engine.py  test_eval_preflight.py  test_eval_runner.py  test_examples.py  test_landing_page_extraction.py  test_model_review_usefulness.py  test_ollama.py  test_policy.py  test_policy_coverage.py  test_real_cases_validator.py  test_reports.py  test_research_loop.py  test_rewrite_quality.py  test_scoring_config.py  test_storage.py  test_ui_static.py
